@@ -4,7 +4,7 @@
 % Copy html.4ht into the work directory before each of the 
 %            first two compilations
 %
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -65,7 +65,7 @@
 
 \<jsml\><<<
 % jsml.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
@@ -73,7 +73,7 @@
 
 \<jsml-math\><<<
 % jsml-math.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2015 TeX Users Group
+% Copyright 2009-2016 TeX Users Group
 % Copyright |CopyYear.2006. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
